[package]
name = "vts-rs"
version = "0.1.0"
authors = ["MGlolenstine <mglolenstine@gmail.com>"]
license = "MIT or Apache-2.0"
description = "Rust crate for interacting with virtual_touchscreen kernel module."
repository = "https://github.com/MGlolenstine/vts-rs"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
